# spinach

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  LICENSE  Makefile  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: python-publish.yml  tests.yml
doc/: Makefile  conf.py  index.rst
doc/hacking/: contributing.rst  internals.rst
doc/user/: asyncio.rst  design.rst  engine.rst  faq.rst  install.rst  integrations.rst  jobs.rst  production.rst  queues.rst  signals.rst  tasks.rst
examples/: asyncio_workers.py  flaskapp.py  periodic.py  queues.py  quickstart.py
spinach/: __init__.py  const.py  engine.py  exc.py  job.py  queuey.py  signals.py  spinach.py  task.py  utils.py  worker.py
spinach/brokers/: base.py  memory.py  redis.py
spinach/brokers/redis/: enqueue_future_job.lua  redis.py
spinach/brokers/redis_scripts/: deregister.lua  enqueue_future_job.lua  enqueue_job.lua  enqueue_jobs_from_dead_broker.lua  flush.lua  get_job_from_queue.lua  get_jobs_from_queue.lua  list_queue.lua  move_future_jobs.lua  register_periodic_tasks.lua  remove_job_from_running.lua  set_concurrency_keys.lua
spinach/contrib/: datadog.py  flask_spinach.py  sentry.py  sentry_sdk_spinach.py
spinach/contrib/spinachd/: __init__.py  apps.py  mail.py  settings.py  signals.py  tasks.py
spinach/contrib/spinachd/management/commands/: spinach.py
tests/: conftest.py  docker-compose.yml  test_brokers.py  test_engine.py  test_job.py  test_memory_brokers.py  test_queuey.py  test_redis_brokers.py  test_signals.py  test_spinach.py  test_task.py  test_utils.py  test_worker.py
tests/contrib/: test_datadog.py  test_django.py  test_flask.py  test_sentry.py
tests/functional/: test_concurrency.py
